feat: frontend, and collabrations docs
